src/styles/components/todo.scss
@use "../helpers" as *;

.todo {
  width: max(80%, rem(330));
  display: flex;
  flex-direction: column;
  font-size: 2rem;

  @include desktop-below {
    font-size: fluid(32, 20);
  }

  > * {
    background-color: var(--color-white);

    &:not(:last-child) {
      border-bottom: var(--border);
    }
  }

  // Header related
  &__header {
    position: relative;
    z-index: 10;
    padding-block: var(--padding-big);
    display: flex;
    align-items: center;
    column-gap: rem(30);
    border-top-left-radius: var(--border-radius);
    border-top-right-radius: var(--border-radius);
    transition-duration: var(--transition-duration);

    &:has(.todo__input:focus) {
      border-color: transparent;
      box-shadow: var(--box-shadow);
    }

    @include desktop-below {
      column-gap: fluid(30, 10);
    }
  }

  &__form {
    flex-grow: 1;
  }

  &__input {
    width: 100%;
    height: 100%;
    font-size: 1.05em;
    outline: none;
  }

  // Footer related
  &__footer {
    padding: var(--padding-big) var(--padding-small);
    display: flex;
    align-items: center;
    column-gap: rem(100);
    font-size: 0.8em;
    border-bottom-left-radius: var(--border-radius);
    border-bottom-right-radius: var(--border-radius);

    @include desktop-below {
      justify-content: space-between;
      align-items: flex-start;
    }
  }
}

